@@ -1,38 +1,37 @@
 package de.szut.weather.stats;
 
-import java.util.GregorianCalendar;
-import java.util.HashMap;
 import java.util.LinkedList;
 
 import de.szut.weather.models.*;
-import de.szut.weather.parser.CSVReaderOptions;
 
 public class WeatherStats {
 
 	private LinkedList<Entry> entrys;
 
 	private double tm; //average temperature
+	private Entry shk; //day with highest snow
 	private LinkedList<Entry> fx; //five days, highest wind speed
 	private LinkedList<Entry> tx; //five hottest days
-	private Entry shk; //day with highest snow
 
 	public WeatherStats(LinkedList<Entry> entrys) {
 		this.entrys = entrys;
-
 		calcStats();
 	}
 
 	private void calcStats() {
 		fx = new LinkedList<Entry>();
+		tx = new LinkedList<Entry>();
+		shk = entrys.getFirst();
 		
 		for (int i = 0; i < 5; i++){
-			fx.add(entrys.get(0));
-			
+			fx.add(entrys.getFirst());
+			tx.add(entrys.getFirst());
+
 			for(Entry entry : entrys) {
-				
-				// average temperatur
+				// average temperature ----- highest snow height
 				if(i == 0) {
 					tm += entry.getValueAsDouble("TM");
+					if (entry.getValueAsDouble("SHK") > shk.getValueAsDouble("SHK") ) shk.put("SHK", entry.getValueAsString("SHK") );
 				}
 
 				//highest wind speed
@@ -44,14 +43,17 @@ public class WeatherStats {
 				} catch(NullPointerException e) {
 					// TODO
 				}
+				//hotest five days
+				try {
+					if (entry.getValueAsDouble("TX") > tx.get(i).getValueAsDouble("TX") && !tx.contains(entry)) {
+						tx.remove(i);
+						tx.add(i, entry);
+					}
+				} catch(NullPointerException e) {
+					//TODO
+				}
 			}
-
-			//hotest month
-
-			//highest snow height
-
 		}
-		
 		tm = tm / entrys.size();
 	}
 
